--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,8 @@ jobs:
             -scheme Paicord \
             -configuration Release \
             -destination "platform=macOS" \
-            -derivedDataPath build-mac
+            -derivedDataPath build-mac \
+            CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
 
       - name: Archive macOS .app
         run: |
@@ -53,7 +54,8 @@ jobs:
             -scheme Paicord \
             -configuration Release \
             -destination "generic/platform=iOS" \
-            -archivePath build-ios/Paicord.xcarchive
+            -archivePath build-ios/Paicord.xcarchive \
+            CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
           xcodebuild -exportArchive \
             -archivePath build-ios/Paicord.xcarchive \
             -exportPath output \
