add swift-bridge skeleton & qt project
Includes paicord-rs, the library for talking to PaicordLib and PaicordQt, a Qt Creator project. Builds for Linux and Android though i haven't properly tested if paicord-rs works on android. Includes a simple test that logs in and listens to events

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 .DS_Store
-/build-mac
-/build-ios
 .build
 .vscode
+.qtcreator
+/build-mac
+/build-ios
+build
 target
 Package.resolved
+paicord-rs/PaicordLibBridge/Sources/generated
+test_token.txt
