sponsors sheet, fix optimistic messages jank, animations in some places, account switcher profiles

--- a/Paicord.xcodeproj/xcshareddata/xcschemes/Paicord.xcscheme
+++ b/Paicord.xcodeproj/xcshareddata/xcschemes/Paicord.xcscheme
@@ -49,6 +49,13 @@
             ReferencedContainer = "container:Paicord.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "SWIFTUI_DISABLE_MIXED_VIEW_HIERARCHY=1"
+            value = ""
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
