test notarise macos

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+
+      - name: Setup Certificates
+        uses: apple-actions/import-codesign-certs@v5
+        with:
+          p12-file-base64: ${{ secrets.DEV_ID_P12_BASE64 }}
+          p12-password: ${{ secrets.DEV_ID_P12_PASSWORD }}
+
+      - name: Download CreateDMG
+        run: |
+          brew install create-dmg
+
+
       - name: Disable Swift macro plugin consent prompt
         run: |
           defaults write com.apple.dt.Xcode IDESkipMacroFingerprintValidation -bool YES
@@ -38,21 +50,37 @@ jobs:
             -destination "platform=macOS" \
             -derivedDataPath build \
             CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
+          cp -R build/Build/Products/Release/Paicord.app dist/dmg/Paicord.app
 
-      - name: Archive macOS .app
+      - name: Sign macOS .app
         run: |
-          mkdir -p output
-          cp -R build/Build/Products/Release/Paicord.app output/Paicord.app
-          cd output
-          zip -r Paicord-macOS.zip Paicord.app
-          rm -rf Paicord.app
-          cd ..
+          codesign --deep --force --options runtime --sign "${{ secrets.DEV_ID_IDENTITY_NAME }}" \
+          output/Paicord.app
 
-      - name: Upload macOS Artifact
+      - name: Create DMG
+        run: |
+          mkdir -p dist/out
+          create-dmg \
+            --volname "Paicord" \
+            --window-pos 200 120 \
+            --window-size 510 350 \
+            --icon-size 100 \
+            --icon Paicord.app 160 155 \
+            --hide-extension "Paicord.app" \
+            --app-drop-link 350 155 \
+            dist/Paicord.dmg dist/dmg
+
+      - name: Notarize DMG
+        run: |
+          xcrun notarytool submit dist/Paicord.dmg --apple-id "${{ secrets.APPLE_ID_EMAIL }}" --password "${{ secrets.APPLE_ID_PASSWORD }}" --team-id "${{ secrets.APPLE_ID_TEAM }}" --wait
+          xcrun stapler staple dist/Paicord.dmg
+
+      - name: Upload Universal DMG
         uses: actions/upload-artifact@v4
         with:
           name: Paicord-macOS
-          path: output/Paicord-macOS.zip
+          path: |
+            dist/Paicord.dmg
 
   build-ios:
     name: Build iOS
