--- a/Paicord/Info.plist
+++ b/Paicord/Info.plist
@@ -4,5 +4,11 @@
 <dict>
 	<key>UIDesignRequiresCompatibility</key>
 	<true/>
+	<key>SUEnableAutomaticChecks</key>
+	<true/>
+	<key>SUScheduledCheckInterval</key>
+	<integer>43200</integer>
+	<key>SUFeedURL</key>
+	<string>https://raw.githubusercontent.com/llsc12/Paicord/refs/heads/updates/feeds/appcast.xml</string>
 </dict>
 </plist>
